# AgentForge

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.agents/plans/: phase-2-langgraph-multi-agent.md  phase-3-memory-web-intelligence.md  phase-3-pbi-3.1-mem0-integration.md  phase-3-pbi-3.2-crawl4ai-integration.md  phase-3-pbi-3.3-brave-search.md  phase-3-pbi-3.4-memory-aware-agent.md  phase-4-local-ai-caching.md  phase-5-evaluation-mcp.md  phase-5-run-1-evaluation-pipeline.md  phase-5-run-2-mcp-server.md  phase-5-run-3-testing-docs.md  phase-6-frontend-deployment.md  phase-6-pbi-6.1-frontend-template.md  phase-6-pbi-6.2-proxy-production-docker.md  phase-6-pbi-6.3-ci-docs.md
.claude/: settings.local.json
.claude/commands/: plan-feature.md
.github/workflows/: ci.yml
config/caddy/: Caddyfile
config/searxng/: settings.yml
docs/: PRD.md  Phase1.md  Phase2.md  Phase3.md  Phase4.md  Phase5.md  Phase6.md  capabilities.md  deployment-guide.md  evaluation-guide.md  frontend-customization.md  gpu-sharing.md  local-ai-guide.md  mcp-integration.md  memory-aware-agents.md  pattern-decision-guide.md  testing-patterns.md
frontend/: Dockerfile  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: collect.py  evaluate.py  export_dataset.py  mcp_server.py  pull_model.py  seed.py
src/: config.py
src/agent/: agent.py  analysis_agent.py  memory_agent.py  models.py  research_agent.py  synthesis_agent.py  tools.py
src/api/: main.py  routes.py  schemas.py
src/cache/: __init__.py  client.py
src/collector/: base.py  models.py  scheduler.py  web_scraper.py  youtube.py
src/db/: client.py  queries.py
src/mcp/: server.py  (+1 more)
tests/: conftest.py  test_agent.py  test_api.py  test_cache.py  test_collector.py  test_cross_agent_tracing.py  test_evaluation.py  test_mcp_server.py  test_memory.py  test_memory_agent.py  test_ollama_provider.py  test_orchestration.py  test_searxng.py  test_web_scraper.py  test_web_search.py
(+39 files in other folders)
